<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.emi19.imc_aplication.IMC">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto1"
        android:textSize="20dp"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:id="@+id/textView" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextPeso"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto2"
        android:textSize="20dp"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:id="@+id/textView2"
        android:layout_below="@+id/editTextPeso"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextestatura"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/editTextPeso"
        android:layout_alignEnd="@+id/editTextPeso" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/botonLimpiar"
        android:id="@+id/buttonlimpiar"
        android:layout_below="@+id/editTextestatura"
        android:layout_alignLeft="@+id/textViewindicado"
        android:layout_alignStart="@+id/textViewindicado" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/botonCalcular"
        android:id="@+id/buttoncalcular"
        android:layout_above="@+id/textViewindicado"
        android:layout_alignRight="@+id/textViewindicado"
        android:layout_alignEnd="@+id/textViewindicado" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mensaje"
        android:textSize="20dp"
        android:id="@+id/textViewindicado"
        android:layout_below="@+id/buttonlimpiar"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/indicador_estado"
       android:textSize="20dp"
        android:id="@+id/textViewestado"
        android:layout_marginTop="55dp"
        android:layout_below="@+id/textViewindicado"
        android:layout_alignLeft="@+id/textViewindicado"
        android:layout_alignStart="@+id/textViewindicado" />
</RelativeLayout>
